core/compiler/tests/programs/ok/generic_5.loz
f x y = x + y

Main = f 18 12