core/compiler/tests/programs/parse_err/non_terminated_where.loz
f x = g x
where
    g x = 18 + x


main = f 18